@@ -2,18 +2,18 @@ require File.expand_path("#{File.dirname(__FILE__)}/../../../unit_spec_helper")
 
 module JsTestCore
   module Resources
-    describe Runners::FirefoxRunner do
+    describe Runners::IExploreRunner do
       attr_reader :request, :driver, :suite_id
 
       before do
         @driver = "Selenium Driver"
         @suite_id = "DEADBEEF"
-        stub(Selenium::SeleniumDriver).new('localhost', 4444, '*firefox', 'http://0.0.0.0:8080') do
+        stub(Selenium::SeleniumDriver).new('localhost', 4444, '*iexplore', 'http://0.0.0.0:8080') do
           driver
         end
       end
 
-      describe "POST /runners/firefox" do
+      describe "POST /runners/iexplore" do
         before do
           stub(Thread).start.yields
           stub(connection).send_head
@@ -27,7 +27,7 @@ module JsTestCore
 
           mock(connection).send_head
           mock(connection).send_body("suite_id=#{suite_id}")
-          connection.receive_data("POST /runners/firefox HTTP/1.1\r\nHost: _\r\n\r\n")
+          connection.receive_data("POST /runners/iexplore HTTP/1.1\r\nHost: _\r\n\r\n")
         end
 
         describe "when a selenium_host parameter is passed into the request" do
@@ -38,11 +38,11 @@ module JsTestCore
           end
 
           it "starts the Selenium Driver with the passed in selenium_host" do
-            mock(Selenium::SeleniumDriver).new('another-machine', 4444, '*firefox', 'http://0.0.0.0:8080') do
+            mock(Selenium::SeleniumDriver).new('another-machine', 4444, '*iexplore', 'http://0.0.0.0:8080') do
               driver
             end
             body = "selenium_host=another-machine"
-            connection.receive_data("POST /runners/firefox HTTP/1.1\r\nHost: _\r\nContent-Length: #{body.length}\r\n\r\n#{body}")
+            connection.receive_data("POST /runners/iexplore HTTP/1.1\r\nHost: _\r\nContent-Length: #{body.length}\r\n\r\n#{body}")
           end
         end
 
@@ -54,11 +54,11 @@ module JsTestCore
           end
 
           it "starts the Selenium Driver from localhost" do
-            mock(Selenium::SeleniumDriver).new('localhost', 4444, '*firefox', 'http://0.0.0.0:8080') do
+            mock(Selenium::SeleniumDriver).new('localhost', 4444, '*iexplore', 'http://0.0.0.0:8080') do
               driver
             end
             body = "selenium_host="
-            connection.receive_data("POST /runners/firefox HTTP/1.1\r\nHost: _\r\nContent-Length: #{body.length}\r\n\r\n#{body}")
+            connection.receive_data("POST /runners/iexplore HTTP/1.1\r\nHost: _\r\nContent-Length: #{body.length}\r\n\r\n#{body}")
           end
         end
 
@@ -70,11 +70,11 @@ module JsTestCore
           end
 
           it "starts the Selenium Driver with the passed in selenium_port" do
-            mock(Selenium::SeleniumDriver).new('localhost', 4000, '*firefox', 'http://0.0.0.0:8080') do
+            mock(Selenium::SeleniumDriver).new('localhost', 4000, '*iexplore', 'http://0.0.0.0:8080') do
               driver
             end
             body = "selenium_port=4000"
-            connection.receive_data("POST /runners/firefox HTTP/1.1\r\nHost: _\r\nContent-Length: #{body.length}\r\n\r\n#{body}")
+            connection.receive_data("POST /runners/iexplore HTTP/1.1\r\nHost: _\r\nContent-Length: #{body.length}\r\n\r\n#{body}")
           end
         end
 
@@ -86,17 +86,17 @@ module JsTestCore
           end
 
           it "starts the Selenium Driver from localhost" do
-            mock(Selenium::SeleniumDriver).new('localhost', 4444, '*firefox', 'http://0.0.0.0:8080') do
+            mock(Selenium::SeleniumDriver).new('localhost', 4444, '*iexplore', 'http://0.0.0.0:8080') do
               driver
             end
             body = "selenium_port="
-            connection.receive_data("POST /runners/firefox HTTP/1.1\r\nHost: _\r\nContent-Length: #{body.length}\r\n\r\n#{body}")
+            connection.receive_data("POST /runners/iexplore HTTP/1.1\r\nHost: _\r\nContent-Length: #{body.length}\r\n\r\n#{body}")
           end
         end
 
         describe "when a spec_url is passed into the request" do
-          it "runs Selenium with the passed in host and part to run the specified spec suite in Firefox" do
-            mock(Selenium::SeleniumDriver).new('localhost', 4444, '*firefox', 'http://another-host:8080') do
+          it "runs Selenium with the passed in host and part to run the specified spec suite in iexplore" do
+            mock(Selenium::SeleniumDriver).new('localhost', 4444, '*iexplore', 'http://another-host:8080') do
               driver
             end
             mock(driver).start
@@ -104,24 +104,24 @@ module JsTestCore
             mock(driver).session_id {suite_id}.at_least(1)
 
             body = "spec_url=http://another-host:8080/specs/subdir"
-            connection.receive_data("POST /runners/firefox HTTP/1.1\r\nHost: _\r\nContent-Length: #{body.length}\r\n\r\n#{body}")
+            connection.receive_data("POST /runners/iexplore HTTP/1.1\r\nHost: _\r\nContent-Length: #{body.length}\r\n\r\n#{body}")
           end
         end
 
         describe "when a spec_url is not passed into the request" do
           before do
-            mock(Selenium::SeleniumDriver).new('localhost', 4444, '*firefox', 'http://0.0.0.0:8080') do
+            mock(Selenium::SeleniumDriver).new('localhost', 4444, '*iexplore', 'http://0.0.0.0:8080') do
               driver
             end
           end
 
-          it "uses Selenium to run the entire spec suite in Firefox" do
+          it "uses Selenium to run the entire spec suite in iexplore" do
             mock(driver).start
             mock(driver).open("http://0.0.0.0:8080/specs")
             mock(driver).session_id {suite_id}.at_least(1)
 
             body = "spec_url="
-            connection.receive_data("POST /runners/firefox HTTP/1.1\r\nHost: _\r\nContent-Length: #{body.length}\r\n\r\n#{body}")
+            connection.receive_data("POST /runners/iexplore HTTP/1.1\r\nHost: _\r\nContent-Length: #{body.length}\r\n\r\n#{body}")
           end
         end
       end
@@ -136,7 +136,7 @@ module JsTestCore
           create_runner_connection = create_connection
           stub(create_runner_connection).send_head
           stub(create_runner_connection).send_body
-          create_runner_connection.receive_data("POST /runners/firefox HTTP/1.1\r\nHost: _\r\n\r\n")
+          create_runner_connection.receive_data("POST /runners/iexplore HTTP/1.1\r\nHost: _\r\n\r\n")
           @runner = Resources::Runners::Runner.find(suite_id)
           mock(driver).stop
         end
