@@ -1,3 +1,4 @@
+- Added support for running specs in Internet Explorer via POST /runners/iexplore
 - Resource file download performance improvements via caching and chunked sending
 - Fixed false positive bug when Client connection times out
 
